Fix color navigation mobile

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -73,7 +73,7 @@
       right: 0;
       top: 100%;
       z-index: 1;
-      background: #421e2f;
+      background: #27ae60;
       width: 100%;
       max-width: 320px;
       border-radius: 0 0 0 12px;
